// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ansible Automation Resolver Correctly resolves Ansible Job Templates 1`] = `
Object {
  "data": Object {
    "ansibleJobTemplates": Array [
      Object {
        "description": "",
        "extra_vars": "",
        "name": "Demo Job Template",
      },
    ],
  },
}
`;

exports[`Ansible Automation Resolver Correctly resoves ansible credentials 1`] = `
Object {
  "data": Object {
    "ansibleCredentials": Array [
      Object {
        "host": "https://ansible-tower-web-svc-tower.apps.policy-grc-cp-dev-z4bg2.dev08.red-chesterfield.com",
        "name": "toweraccess",
        "namespace": "default",
        "token": "cjRqWnl5eWh1M2pYMzNuUFNrY25oQ2VKQ1ZNQlNN",
      },
      Object {
        "host": "https://ansible-tower-web-svc-tower.apps.policy-grc-cp-dev-z4bg2.dev08.red-chesterfield.com",
        "name": "toweraccess",
        "namespace": "kube-system",
        "token": "cjRqWnl5eWh1M2pYMzNuUFNrY25oQ2VKQ1ZNQlNN",
      },
      Object {
        "host": "https://ansible-tower-web-svc-tower.apps.policy-grc-cp-dev-z4bg2.dev08.red-chesterfield.com",
        "name": "toweraccess",
        "namespace": "policy-namespace",
        "token": "cjRqWnl5eWh1M2pYMzNuUFNrY25oQ2VKQ1ZNQlNN",
      },
      Object {
        "host": "https://ansible-tower-web-svc-tower.apps.policy-grc-cp-dev-z4bg2.dev08.red-chesterfield.com",
        "name": "toweraccess",
        "namespace": "cluster1",
        "token": "cjRqWnl5eWh1M2pYMzNuUFNrY25oQ2VKQ1ZNQlNN",
      },
      Object {
        "host": "https://ansible-tower-web-svc-tower.apps.policy-grc-cp-dev-z4bg2.dev08.red-chesterfield.com",
        "name": "toweraccess",
        "namespace": "local-cluster",
        "token": "cjRqWnl5eWh1M2pYMzNuUFNrY25oQ2VKQ1ZNQlNN",
      },
    ],
  },
}
`;

exports[`Ansible Automation Resolver Should copy and return secret name as credential needs to be copied 1`] = `
Object {
  "data": Object {
    "copyAnsibleSecret": Object {
      "name": "default.toweraccess",
    },
  },
}
`;

exports[`Ansible Automation Resolver Should return existing secret name as the copied secret already exists 1`] = `
Object {
  "data": Object {
    "copyAnsibleSecret": Object {
      "name": "existing_toweraccess",
    },
  },
}
`;

exports[`Ansible Automation Resolver Should return root ansible credential name as the targeNamespace is same as credential namespace 1`] = `
Object {
  "data": Object {
    "copyAnsibleSecret": Object {
      "name": "toweraccess",
    },
  },
}
`;
